mType/tests/testFiles/error/error/enhancedUndefinedFunctionLocation.mt
// Test enhanced undefined function exception with location info
int x = 5;
int result = nonExistentFunction(x);  // Line 3: Should show undefined function error with location
print("This should not execute");